# mappable

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  example.cpp
mappable/: comparable.hpp  contig_region.hpp  genomic_region.hpp  mappable.hpp  mappable_algorithms.hpp  mappable_flat_multi_set.hpp  mappable_flat_set.hpp  mappable_fwd.hpp  mappable_map.hpp  mappable_range.hpp  mappable_range_io.hpp  mappable_reference_wrapper.hpp  type_tricks.hpp
test/: CMakeLists.txt  comparable_tests.cpp  contig_region_tests.cpp  genomic_region_tests.cpp  mappable_algorithm_tests.cpp  mappable_flat_set_tests.cpp  mappable_range_tests.cpp  mappable_tests.cpp
